--- a/index.html
+++ b/index.html
@@ -275,19 +275,40 @@
         <section id="feedback">
             <h2>Community Feedback</h2>
             <p>If you have any questions or suggestions, please submit them below:</p>
-            <form action="mailto:recharge-ok@ou.edu" method="post" enctype="text/plain">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+ <!-- 引入 EmailJS 脚本 -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
+<script type="text/javascript">
+    (function() {
+        emailjs.init("Pptygy5BODf3PKPEN"); // 替换为您的 User ID
+    })();
+</script>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+<!-- 表单部分 -->
+<form id="feedback-form">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
 
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+
+    <button type="submit">Submit</button>
+</form>
+
+<script type="text/javascript">
+    document.getElementById('feedback-form').addEventListener('submit', function(event) {
+        event.preventDefault(); // 阻止表单默认提交行为
+
+        emailjs.sendForm('service_mxnnpbg', 'template_2sy4t0y', this) // 替换为您的 Template ID
+            .then(function() {
+                alert('Your message has been sent successfully!');
+            }, function(error) {
+                alert('Failed to send your message. Please try again.');
+            });
+    });
+</script>
 
         <!-- Contact Section -->
         <section id="contact">
