--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 <tr class="timeline-event current">
                     <td>11/6/24</td>
                     <td>10:00-13:00</td>
-                    <td>Shawnee</td>
+                    <td>Gordon Cooper Technology Center</td>
                     <td>Workshop and Group Discussions (Current Event)</td>
                 </tr>
                 <tr>
