--- a/index.html
+++ b/index.html
@@ -324,10 +324,15 @@
             <h3>Civic Partnerships</h3>
             <p>We collaborate with multiple community partners to make this project a success:</p>
             <ul>
-                <li><strong>OUHSC (University of Oklahoma Health Sciences Center)</strong>: Provides health impact assessment and public health support for the community.</li>
-                <li><strong>OG&E (Oklahoma Gas & Electric)</strong>: Supplies expertise in energy management and grid integration for the successful implementation of V2G technology.</li>
-                <li><strong>Shawnee Public Schools</strong>: Participates in pilot testing by providing electric school buses for the project, ensuring real-world testing and community involvement.</li>
-                <li><strong>City of Oklahoma City</strong>: Supports regulatory compliance and policy alignment to help facilitate the integration of electric school buses into the city's public transportation system.</li>
+        <li><strong>OUHSC</strong>: Provides health impact assessment and public health support for the community.</li>
+        <li><strong>Shawnee Public Schools</strong>: Participates in pilot testing by providing electric school buses for the project, ensuring real-world testing and community involvement.</li>
+        <li><strong>Gordon Cooper Technology Center</strong>: Provides technical education and workforce development support for V2G implementation.</li>
+        <li><strong>City of Shawnee</strong>: Partners in local implementation and community outreach for the V2G program.</li>
+        <li><strong>City of Oklahoma City</strong>: Supports regulatory compliance and policy alignment to help facilitate the integration of electric school buses into the city's public transportation system.</li>
+        <li><strong>ACOG</strong>: Facilitates regional coordination and planning for sustainable transportation initiatives.</li>
+        <li><strong>INCOG</strong>: Supports regional planning and coordination efforts.</li>
+        <li><strong>IC Bus</strong>: Provides technical expertise and support for electric school bus implementation.</li>
+        <li><strong>In-Charge</strong>: Offers charging infrastructure solutions and technical support for V2G integration.</li>
             </ul>
         </section>
 
